# OKI

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  flappy_bird.cpp  stopwatch.h  window.h
src/oki/: oki_component.h  oki_ecs.h  oki_handle.h  oki_observer.h  oki_system.h
src/oki/util/: oki_container.h  oki_handle_gen.h  oki_type_erasure.h
test/: CMakeLists.txt  oki_test_component.cpp  oki_test_container.cpp  oki_test_handle.cpp  oki_test_observer.cpp  oki_test_system.cpp  oki_test_type_erasure.cpp  oki_test_util.h
